<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_intro"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- How to play -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/help_HowToPlay_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_HowToPlay_Title" />

                <TextView
                    android:id="@+id/help_HowToPlay_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_HowToPlay_Content"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Skill levels -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/help_Difficulties_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_Difficulties_Title" />

                <TextView
                    android:id="@+id/help_Difficulties_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_Difficulties_Content"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Menu -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/help_Menu_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_Menu_Title" />

                <TextView
                    android:id="@+id/help_Menu_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_Menu_Content"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Hints -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/help_Hints_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_Hints_Title" />

                <TextView
                    android:id="@+id/help_Hints_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_Hints_Content"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>